crux-mir/test/symb_eval/concretize/assert.good
test assert/<DISAMB>::crux_test[0]: returned 1, [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- assert/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:49:13: 56:14 !test/symb_eval/concretize/assert.rs:10:5: 10:81: error: in assert/<DISAMB>::crux_test[0]
[Crux]   MIR assertion at test/symb_eval/concretize/assert.rs:10:5:
[Crux]   	100 + 157 == 1

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 1
[Crux]   Proved: 0
[Crux]   Disproved: 1
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
